# pdf-studio

./: .android-trigger  .gitignore  .release-trigger  ANDROID_BUILD_BN.md  AUTO_UPDATE_SETUP_BN.md  BUILD_INSTRUCTIONS_BN.md  CHANGELOG.md  capacitor.config.json  package-lock.json  package.json
.github/workflows/: android.yml  release.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/everflow/pdfstudio/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
