[package]
name = "pdf-studio"
version = "3.10.1"
description = "PDF Studio - private, offline PDF reader & editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
